Fix for the menu collapse issue, post resize from responsive

--- a/public/bootstrap/less/responsive.less
+++ b/public/bootstrap/less/responsive.less
@@ -331,6 +331,7 @@
 @media (min-width: 980px) {
   .nav-collapse.collapse {
     height: auto !important;
+    overflow: visible !important;  //FIX FOR MENU COLLAPSE ISSUE - https://github.com/twitter/bootstrap/commit/2068b74ea8b311aa984920bd115ca37963de56d1
   }
 }
 
